--- a/AluraWebAPI/appsettings.json
+++ b/AluraWebAPI/appsettings.json
@@ -4,5 +4,11 @@
       "Default": "Warning"
     }
   },
+
+  "ConnectionStrings": {
+    "ListaLeitura": "Server=(localdb)\\MSSQLLocalDB;Database=AluraListaLeitura;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "AuthDB": "Server=(localdb)\\MSSQLLocalDB;Database=AuthDb;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
+
   "AllowedHosts": "*"
 }
