--- a/AluraWebAPI.DAL.Livros/AluraWebAPI.DAL.Livros.csproj
+++ b/AluraWebAPI.DAL.Livros/AluraWebAPI.DAL.Livros.csproj
@@ -4,4 +4,13 @@
     <TargetFramework>netcoreapp2.2</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.2.4" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="2.2.4" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\AluraWebAPI.Model\AluraWebAPI.Model.csproj" />
+  </ItemGroup>
+
 </Project>
