--- a/AluraWebAPI.DAL.Usuarios/AluraWebAPI.DAL.Usuarios.csproj
+++ b/AluraWebAPI.DAL.Usuarios/AluraWebAPI.DAL.Usuarios.csproj
@@ -4,4 +4,10 @@
     <TargetFramework>netcoreapp2.2</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="2.2.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="2.2.4" />
+  </ItemGroup>
+
 </Project>
