--- a/AluraWebAPI/AluraWebAPI.csproj
+++ b/AluraWebAPI/AluraWebAPI.csproj
@@ -21,4 +21,9 @@
     <ProjectReference Include="..\AluraWebAPI.Seguranca\AluraWebAPI.Seguranca.csproj" />
   </ItemGroup>
 
+
+  <ItemGroup>
+    <Folder Include="wwwroot\images\" />
+  </ItemGroup>
+
 </Project>
