--- a/AluraWebAPI.Model/AluraWebAPI.Model.csproj
+++ b/AluraWebAPI.Model/AluraWebAPI.Model.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="2.2.0" />
+    <PackageReference Include="Moq" Version="4.11.0" />
   </ItemGroup>
 
 </Project>
