--- a/AluraWebAPI/AluraWebAPI.csproj
+++ b/AluraWebAPI/AluraWebAPI.csproj
@@ -29,4 +29,11 @@
     <Folder Include="wwwroot\images\" />
   </ItemGroup>
 
+
+  <ItemGroup>
+    <Content Update="wwwroot\images\capas\capa-vazia.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
 </Project>
